kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-grafana
spec:
  hostnames:
    - grafana.home.ducknet.fun
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: observability
          port: 80
